@@ -10,7 +10,8 @@ module Cache
   # access the cache.
   #
   # If there is a cache miss and a block is given the result of the block will
-  # be stored in the cache with optional +expiry+.
+  # be stored in the cache with optional +expiry+, using the +add+ method rather
+  # than +set+.
 
   def self.get(key, expiry = 0)
     start_time = Time.now
@@ -19,7 +20,7 @@ module Cache
     ActiveRecord::Base.logger.debug('MemCache Get (%0.6f)  %s' % [elapsed, key])
     if value.nil? and block_given? then
       value = yield
-      put key, value, expiry
+      add key, value, expiry
     end
     value
   rescue MemCache::MemCacheError => err
@@ -41,6 +42,21 @@ module Cache
     elapsed = Time.now - start_time
     ActiveRecord::Base.logger.debug('MemCache Set (%0.6f)  %s' % [elapsed, key])
     value
+  rescue MemCache::MemCacheError => err
+    ActiveRecord::Base.logger.debug "MemCache Error: #{err.message}"
+    nil
+  end
+
+  ##
+  # Sets +value+ in the cache at +key+, with an optional +expiry+ time in
+  # seconds.  If +key+ already exists in cache, returns nil.
+
+  def self.add(key, value, expiry = 0)
+    start_time = Time.now
+    response = CACHE.add key, value, expiry
+    elapsed = Time.now - start_time
+    ActiveRecord::Base.logger.debug('MemCache Add (%0.6f)  %s' % [elapsed, key])
+    (response == "STORED\r\n") ? value : nil
   rescue MemCache::MemCacheError => err
     ActiveRecord::Base.logger.debug "MemCache Error: #{err.message}"
     nil
